# monty-hall

./: .gitignore  README.md  pyproject.toml
monty_hall/: main.py
monty_hall/game/: monty_hall_game.py
monty_hall/representation/: __init__.py  lose.py  win.py
