[tool.poetry]
name = "monty-hall"
version = "0.1.0"
description = ""
authors = ["vitormanita <vmanita@outlook.pt>"]
readme = "README.md"
packages = [{include = "monty_hall"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
